# RatingServer

./: Makefile  README.MD  main.py  pyproject.toml  requirements.txt  settings.toml
alembic/: env.py
alembic/versions/: a31fd094ef40_create_games_and_players_tables.py
config/: configuration.py  settings.toml
configuration/: __init__.py
domain/entities/: player.py
domain/repositories/: player_repository.py
infrastructure/database/models/: player.py
src/application/api/routes/: player.py
src/application/api/schemas/: player.py
src/application/dto/: player_dto.py
src/application/use_cases/: base.py  create_player.py  get_player.py
src/common/: excpetion_with_details.py
src/domain/entities/: game.py  player.py
src/domain/exceptions/: player.py
src/domain/repositories/: game_repository.py  player_repository.py
src/domain/value_objects/: game_id.py  game_result.py  nickname.py  rating.py
src/domain/value_objects/player/: player_creation_data.py  player_id.py
src/infrastructure/api/routes/: player.py
src/infrastructure/api/schemas/: player.py
src/infrastructure/database/: async_database.py
src/infrastructure/database/models/: game.py  player.py
src/infrastructure/database/repositories/: player_repository.py
src/infrastructure/di/: di_container.py
src/infrastructure/exceptions/: database.py
src/presentation/api/middleaware/: db_exception_handler.py
src/presentation/api/routes/: player.py
tests/: conftest.py
tests/application/use_cases/: test_create_player_usecase.py  test_get_player_usecase.py
tests/tests_infrastructure/database/: fixtures.py
tests/tests_infrastructure/database/repositories/: fixtures.py  test_player_repository.py
